# CKB

./: readme.txt  settings.gradle  usg.c
TEMP/cpp/: CMakeLists.txt  array.c  array.h  ckb.c  ckb.h  ckb_keys.h  ckb_mkeys.h  default_config.cpp  parser.c
TEMP/java/com/example/customkb/: CKBSettings.java  CKBactivity.java  CKBnativelib.java  CKBservice.java  CKBview2.java  ColorPicker.java
TEMP/res/drawable/: popup_bk.xml
TEMP/res/layout/: parent_layout.xml
TEMP/res/values/: strings.xml
app/: build.gradle
app/src/androidTest/java/com/example/ckbdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  array.c  array.h  ckb.c  ckb.cpp  ckb.h  ckb_mkeys.h  default_config.cpp  parser.c  unicode.c  unicode_search.c
app/src/main/java/com/example/ckbdemo/: CKBSettings.java  CKBactivity.java  CKBservice.java  CKBview2.java  ColorPicker.java  TouchInfo.java
app/src/main/java/com/example/customkb/: CKBSettings.java  CKBactivity.java  CKBnativelib.java  CKBservice.java  CKBsettings2.java  CKBview2.java  CKBview3.java  ColorPicker.java  TouchInfo.java
app/src/main/res/layout/: parent_layout.xml  popup_view.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/ckbdemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
unicode_data_generator/: array.c  unicode.c  unicode_search.h  usg.c
